<resources>
    <string name="app_name">PokerTournament</string>
    <string name="start_service">Start service</string>
    <string name="blinds_is">Current blinds</string>
    <string name="next_blinds">Next blinds</string>
    <string name="increase_in">Increase in</string>
    <string name="blinds_increase">Blinds increase</string>
    <string name="new_blinds">New blinds</string>
    <string name="blinds_structure">Blinds structure</string>
    <string name="round_time">Round time</string>
    <string name="start_blind">Start blind</string>
    <string name="start">start</string>
    <string name="stop">Stop</string>
    <string name="tap_one_more">Tap one more time to stop</string>

    <string name="change_structures">Change structures</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <string name="title_fragment_about">About</string>
    <string name="title_opensource">Open source licenses</string>

    <string name="db_created_pref" translatable="false">db_created</string>

    <string-array name="blinds_structures">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>

    <string name="structure_slow">Slow</string>
    <string name="structure_mid">Medium</string>
    <string name="structure_fast">Fast</string>
    <string name="about">About app</string>

    <string-array name="time_for_round">
        <item>1</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="blinds_slow">
        <item>5/10</item>
        <item>10/20</item>
        <item>15/30</item>
        <item>20/40</item>
        <item>25/50</item>
        <item>30/60</item>
        <item>40/80</item>
        <item>50/100</item>
        <item>60/120</item>
        <item>70/140</item>
        <item>80/160</item>
        <item>100/200</item>
        <item>120/250</item>
        <item>150/300</item>
        <item>170/350</item>
        <item>200/400</item>
        <item>250/500</item>
        <item>300/600</item>
        <item>350/700</item>
        <item>400/800</item>
        <item>500/1000</item>
        <item>600/1200</item>
        <item>700/1500</item>
        <item>800/1700</item>
        <item>1000/2000</item>
        <item>1200/2400</item>
        <item>1500/3000</item>
        <item>1700/3500</item>
        <item>2000/4000</item>
        <item>2500/5000</item>
        <item>3000/6000</item>
        <item>3500/7000</item>
        <item>4000/8000</item>
        <item>5000/10000</item>
        <item>6000/12000</item>
        <item>7000/15000</item>
        <item>8000/17000</item>
        <item>10000/20000</item>
    </string-array>

    <string-array name="blinds_mid">
        <item>5/10</item>
        <item>10/20</item>
        <item>15/30</item>
        <item>20/40</item>
        <item>30/60</item>
        <item>40/80</item>
        <item>50/100</item>
        <item>60/120</item>
        <item>75/150</item>
        <item>100/200</item>
        <item>125/250</item>
        <item>150/300</item>
        <item>200/400</item>
        <item>300/600</item>
        <item>400/800</item>
        <item>500/1000</item>
        <item>600/1200</item>
        <item>800/1500</item>
        <item>1000/2000</item>
        <item>1300/2500</item>
        <item>1500/3000</item>
        <item>2000/4000</item>
        <item>2500/5000</item>
        <item>3500/7000</item>
        <item>4000/8000</item>
        <item>5000/10000</item>
        <item>6000/12000</item>
        <item>7000/14000</item>
        <item>9000/18000</item>
        <item>11000/22000</item>
        <item>14000/28000</item>
        <item>17000/35000</item>
        <item>21000/42000</item>
        <item>25000/50000</item>
    </string-array>

    <string-array name="blinds_fast">
        <item>5/10</item>
        <item>10/20</item>
        <item>20/40</item>
        <item>40/80</item>
        <item>60/120</item>
        <item>100/200</item>
        <item>150/300</item>
        <item>200/400</item>
        <item>300/600</item>
        <item>400/800</item>
        <item>500/1000</item>
        <item>750/1500</item>
        <item>1000/2000</item>
        <item>1500/3000</item>
        <item>2500/5000</item>
        <item>4000/8000</item>
        <item>6000/12000</item>
        <item>10000/20000</item>
        <item>15000/30000</item>
        <item>25000/50000</item>
        <item>40000/80000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
