<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.volgoak.pokertournament.MainActivity">

        <TextView
            android:text="@string/blinds_structure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_blind_structure_main"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_below="@+id/sp_round_time_main"
            android:layout_alignParentEnd="true"
            android:id="@+id/sp_blinds_structure_main"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_blind_structure_main"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />


        <TextView
            android:text="@string/round_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_round_time_main"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sp_blinds_structure_main"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/sp_round_time_main"
            android:layout_below="@+id/tv_blind_structure_main"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_round_time_main"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_start_main"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sp_round_time_main"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>