<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.volgoak.pokertournament.TournamentActivity"
    android:background="@drawable/table_background"
    android:keepScreenOn="true">

    <TextView
        android:text="00:00"
        android:id="@+id/tv_time_to_next_tournament"
        android:textSize="@dimen/timer_text_size"
        android:textColor="@color/colorOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_current_blinds_tourn"
        android:layout_marginBottom="@dimen/views_vertical_margin" />

    <TextView
        android:text="@string/blinds_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_blinds_title_tournament"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_blinds_tourn"
        app:layout_constraintBottom_toTopOf="@+id/tv_current_blinds_tourn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_current_blinds_tourn"
        app:layout_constraintHorizontal_bias="0.67"
        android:layout_marginStart="@dimen/views_horizontal_margin" />

    <TextView
        android:text="0/0"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_current_blinds_tourn"
        android:gravity="center_horizontal"
        android:textSize="@dimen/current_blinds_text_size"
        android:layout_marginTop="@dimen/views_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/views_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:text="@string/next_blinds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_next_blinds_title_tournament"
        app:layout_constraintRight_toRightOf="@+id/tv_blinds_title_tournament"
        app:layout_constraintLeft_toLeftOf="@+id/tv_blinds_title_tournament"
        app:layout_constraintTop_toTopOf="@+id/tv_next_blinds_tour"
        app:layout_constraintBottom_toBottomOf="@+id/tv_next_blinds_tour"/>

    <TextView
        android:text="0/0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_next_blinds_tour"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:textSize="@dimen/next_blinds_text_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_blinds_tourn"
        app:layout_constraintRight_toRightOf="@+id/tv_current_blinds_tourn"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_blinds_tourn"
        android:layout_marginTop="@dimen/views_vertical_margin" />

    <Button
        android:text="@string/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_pause_tournament"
        style="@style/green_button"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/views_vertical_margin" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/green_button"
        android:id="@+id/bt_end_tournament"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/views_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin" />


</android.support.constraint.ConstraintLayout>
</layout>
