<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/tvBlindStructure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/blinds_structure"
        android:textSize="@dimen/title_fields_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheelBlindsStructure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/verticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/tvBlindStructure" />

    <TextView
        android:id="@+id/tvRoundTime"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_time"
        app:layout_constraintLeft_toLeftOf="@+id/verticalCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBlindStructure" />


    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheelRoundTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/verticalCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wheelBlindsStructure" />

    <TextView
        android:id="@+id/tvStartBlinds"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_blind"
        app:layout_constraintLeft_toLeftOf="@+id/wheelStartBlinds"
        app:layout_constraintRight_toRightOf="@+id/wheelStartBlinds"
        app:layout_constraintTop_toBottomOf="@+id/wheelBlindsStructure" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheelStartBlinds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartBlinds" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>